--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,17 +73,26 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+  - family: Inter
+    fonts:
+    - asset: assest/fonts/Inter-Regular.ttf
+    - asset: assest/fonts/Inter-Black.ttf
+    - weight: 900
+    - asset: assest/fonts/Inter-ExtraBold.ttf
+    - weight: 800
+    - asset: assest/fonts/Inter-Bold.ttf
+    - weight: 700
+    - asset: assest/fonts/Inter-SemiBold.ttf
+    - weight: 600
+    - asset: assest/fonts/Inter-Medium.ttf
+    - weight: 500
+    - asset: assest/fonts/Inter-Light.ttf
+    - weight: 300
+    - asset: assest/fonts/Inter-ExtraLight.ttf
+    - weight: 200
+    
+ 
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
